<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_cook"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="Image of the food"
        android:scaleType="centerCrop"
        tools:src="@drawable/sayur_bayam" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descTitle"
                style="@style/TextContent.Title"
                android:text="@string/description"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/descContent"
                style="@style/TextContent.Normal"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/black"
                tools:text="@string/dummy_text" />

            <TextView
                android:id="@+id/ingredientTitle"
                style="@style/TextContent.Title"
                android:text="@string/ingredients"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/ingredientContent"
                style="@style/TextContent.Normal"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/black"
                tools:text="@string/dummy_text" />

            <TextView
                android:id="@+id/stepTitle"
                style="@style/TextContent.Title"
                android:text="@string/steps"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/stepContent"
                style="@style/TextContent.Normal"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/black"
                tools:text="@string/dummy_text" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:drawableLeft="@drawable/ic_baseline_share_white_24"
                android:gravity="center"
                android:text="@string/share" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>